# ice-crawler

./: .gitignore  README.md  package-lock.json
.github/workflows/: Authentification_MS .yml  Data_MS.yml  Database_MS.yml  Domain_MS.yml  Icecrawlerui.yml  Smtp_MS.yml  automation.yml
Documentation/: Commandes.md  Docker.md  Déploiement.md  GitHub.md  Grafana.md  Kubernetes.md  Micro-Services.md  MySQL.md  NAS & NFS.md  Proxmox & VM.md  Rust.md
analyse_ms/: Cargo.toml  Dockerfile
analyse_ms/src/: main.rs
authentification_ms/: .env  Cargo.toml  Dockerfile
authentification_ms/src/: main.rs  models.rs  schema.rs
authentification_ms/templates/: base.html  index.html  login.html  register.html
ci/: README.md  build-docker-ui.sh  build-docker.sh  push-docker.sh
data_ms/: Cargo.toml  Dockerfile
data_ms/src/: bimi.rs  certificate.rs  dane.rs  data.rs  dmarc.rs  dns.rs  ipinfo.rs  main.rs  mta_sts.rs  spf.rs  tls.rs  tls_rpt.rs
database/: database.sql  domain_names.csv
database_ms/: Cargo.toml  Dockerfile
database_ms/src/: main.rs
domain_ms/: Cargo.toml  Dockerfile
domain_ms/src/: ipinfo.rs  main.rs  mx_records.rs
icecrawlerui/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
icecrawlerui/src/: index.html  styles.css
icecrawlerui/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  auth.guard.ts  cache.service.ts  data-col.service.ts  notation.service.ts  token.interceptor.ts
icecrawlerui/src/app/aboutus/: aboutus.component.css  aboutus.component.html  aboutus.component.ts
icecrawlerui/src/app/card/: card.component.css  card.component.html
icecrawlerui/src/app/footer/: footer.component.css  footer.component.html
icecrawlerui/src/app/header/: header.component.css  header.component.html  header.component.ts
icecrawlerui/src/app/home/: home.component.html
icecrawlerui/src/app/login/: login.component.html  login.component.ts
icecrawlerui/src/app/progress-bar/: progress-bar.component.html  progress-bar.component.ts
icecrawlerui/src/app/register/: register.component.css  (+2 more)
kubernetes/: Autentification.yaml  Data.yaml  Database.yaml  Domain.yaml  Kong-endpoints-icecrawler.yaml  Kong.yaml  Postgres-pvc.yaml  Smtp.yaml  WebUI.yaml  grafana.yaml  metal-IPAddressPool.yaml  metal-L2Advertisement.yaml  mysql-deployment.yaml  mysql-secret.yaml  mysql-storage.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-service.yaml  postgres-storage.yaml
smtp_ms/: Cargo.toml  Dockerfile
smtp_ms/src/: cidr.rs  ipinfo.rs  lister_serveurs_port_25.rs  main.rs
tls_ms/: Cargo.toml
tls_ms/src/: main.rs
(+32 files in other folders)
