[package]
name = "webapp_ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jsonwebtoken = "8.1.1"
actix-identity = "0.4.0"
actix-cors = "0.6.3"
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.87"
dotenv = "0.15.0"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8.10"
env_logger = "0.10.0"
log = "0.4"
sha2 = "0.10.6"
rust-argon2 = "1.0.0"
rand = "0.8.5"
sha3 = "0.10.7"
aes-gcm ="0.10.1"
generic-array = "0.14.7"
rust-crypto = "0.2.36"
hex = "0.4.3"
nom = "7.1.3"
base64 = "0.21.0"