[package]
name = "data_ms"
version = "0.1.0"
edition = "2021"
authors = ["Mathis", "Paul"]


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.0"
ipinfo = "0.5.1"
checkssl = { git = "https://github.com/LeMonde21/checkssl" }
dns-lookup = "1.0.8"
json = "0.12.4"
actix-cors = "0.6.4"
reqwest = "0.11.16"
