[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
async-std = "1.12.0"
futures = "0.3.28"
regex = "1.8.1"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["mysql","runtime-actix-rustls"] }
